force-app/main/default/objects/OEA_CPR_OneToMany__c/OEA_CPR_OneToMany__c.object-meta.xml
<CustomObject>
    <label>OEA CPR OneToMany</label>
    <nameField>
        <label>OneToMany Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OEA CPR OneToMany</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>