force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingAmount__c.field-meta.xml
<CustomField>
    <fullName>FundingAmount__c</fullName>
    <label>FundingAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>