force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingDeadline__c.field-meta.xml
<CustomField>
    <fullName>FundingDeadline__c</fullName>
    <label>FundingDeadline</label>
    <type>Date</type>
</CustomField>