force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingDesign__c.field-meta.xml
<CustomField>
    <fullName>FundingDesign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FundingDesign</label>
    <type>Checkbox</type>
</CustomField>