force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingMailing__c.field-meta.xml
<CustomField>
    <fullName>FundingMailing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FundingMailing</label>
    <type>Checkbox</type>
</CustomField>