force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingPrinting__c.field-meta.xml
<CustomField>
    <fullName>FundingPrinting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FundingPrinting</label>
    <type>Checkbox</type>
</CustomField>