force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingSource__c.field-meta.xml
<CustomField>
    <fullName>FundingSource__c</fullName>
    <label>FundingSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CTL</fullName>
            </value>
            <value>
                <fullName>FPHNY</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>