force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingSourceOther__c.field-meta.xml
<CustomField>
    <fullName>FundingSourceOther__c</fullName>
    <label>FundingSourceOther</label>
    <length>100</length>
    <type>Text</type>
</CustomField>