force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/FundingStorage__c.field-meta.xml
<CustomField>
    <fullName>FundingStorage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FundingStorage</label>
    <type>Checkbox</type>
</CustomField>