force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/IsFundingFlexible__c.field-meta.xml
<CustomField>
    <fullName>IsFundingFlexible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFundingFlexible</label>
    <type>Checkbox</type>
</CustomField>