force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/OEA__c.field-meta.xml
<CustomField>
    <fullName>OEA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OEA</label>
    <referenceTo>OEA__c</referenceTo>
    <relationshipName>OEA_CPR_OneToManys</relationshipName>
    <type>Lookup</type>
</CustomField>