force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Record_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Record Number</label>
    <type>AutoNumber</type>
</CustomField>