force-app/main/default/objects/OEA_CPR_OneToMany__c/fields/Reference_Number_Parent__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Parent__c</fullName>
    <label>Reference Number-Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>