force-app/main/default/objects/OEA_CPR_OneToMany__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Record_Number__c</columns>
    <columns>NAME</columns>
    <columns>FundingSource__c</columns>
    <columns>OEA__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reference_Number_Parent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>